# CES35-Lab2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
includes/: http.h
includes/http/: http_request.h  object.h  request.h  response.h  url.h
src/client/: CMakeLists.txt  client.cpp  client.h  main.cpp
src/http/: CMakeLists.txt  http_request.cpp  object.cpp  request.cpp  response.cpp  url.cpp
src/server/: CMakeLists.txt  main.cpp  server.cpp  server.h
tests/: CMakeLists.txt
tests/http/: url_test.cpp
